<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_splashScreen">

    <fragment
        android:id="@+id/fragment_scanner"
        android:name="com.example.opencvtesting.ui.documentScanner.scanner.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_scanner" >
        <action
            android:id="@+id/action_scanner_to_navigation_image_selector"
            app:destination="@id/fragment_navigation_image_contour_selector" />
        <action
            android:id="@+id/action_navigation_scanner_to_documentReaderFragment"
            app:destination="@id/fragment_documentReader"
            app:popUpTo="@id/fragment_scanner" />
    </fragment>

    <fragment
        android:id="@+id/fragment_navigation_image_contour_selector"
        android:name="com.example.opencvtesting.ui.documentScanner.image_contour_selector.ImageContourSelectorFragment"
        android:label="@string/title_image_editor"
        tools:layout="@layout/fragment_image_contour_selector" >
        <argument
            android:name="oriImage"
            app:argType="android.graphics.Bitmap" />
        <argument
            android:name="Contour"
            app:argType="org.opencv.core.Point[]"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/fragment_documentReader"
        android:name="com.example.opencvtesting.ui.documentScanner.document_reader.DocumentReaderFragment"
        android:label="@string/title_document_preview"
        tools:layout="@layout/document_reader_fragment" >
        <argument
            android:name="ScannedDocument"
            app:argType="com.example.opencvtesting.Model.ScannedDocument" />
        <action
            android:id="@+id/action_documentReaderFragment_to_navigation_image_contour_selector"
            app:destination="@id/fragment_navigation_image_contour_selector"
            app:popUpTo="@id/fragment_documentReader" />
    </fragment>
    <fragment
        android:id="@+id/fragment_splashScreen"
        android:name="com.example.opencvtesting.ui.splashScreen.SplashScreen"
        android:label="splash_screen_fragment"
        tools:layout="@layout/splash_screen_fragment" >
        <action
            android:id="@+id/action_splashScreen_to_navigation_scanner"

            app:destination="@id/fragment_scanner"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

</navigation>