<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.signin.SignIn">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/label_email"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorCyan"
        app:hintTextColor="@color/colorCyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mdEditText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mdTextField_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_password"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxStrokeColor="@color/colorCyan"
        app:hintTextColor="@color/colorCyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mdEditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mdBtnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorCyan"
        android:drawableStart="@drawable/logo_no_text"
        android:text="@string/label_signIn"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorCyan"
        app:layout_constraintEnd_toEndOf="@+id/mdTextField_password"
        app:layout_constraintStart_toStartOf="@+id/mdTextField_password"
        app:layout_constraintTop_toBottomOf="@+id/mdTextField_password">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/mdBtnSignIn"
        app:layout_constraintStart_toStartOf="@+id/mdBtnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dont_have_account"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton2"
        app:layout_constraintEnd_toStartOf="@+id/materialButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_signUp_now"
        android:textAllCaps="false"
        android:textColor="@color/colorCyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/mdBtnSignIn" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/colorDarkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/mdTextField_password"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/label_or"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorDarkGrey"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/mdTextField_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>