<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="225dp"
    android:background="@color/colorDarkGrey"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_document_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Document Name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="18/11/2020"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_document_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@null"
                    android:forceDarkAllowed="false"
                    android:gravity="start|center_vertical"
                    android:text="@string/label_share"
                    android:textAllCaps="false"
                    android:theme="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    app:backgroundTint="@null"
                    app:icon="@drawable/ic_baseline_share_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@null"
                    android:forceDarkAllowed="false"
                    android:gravity="start|center_vertical"
                    android:text="@string/label_rename"
                    android:textAllCaps="false"
                    android:theme="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    app:backgroundTint="@null"
                    app:icon="@drawable/ic_baseline_edit_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@null"
                    android:forceDarkAllowed="false"
                    android:gravity="start|center_vertical"
                    android:text="@string/label_modify"
                    android:textAllCaps="false"
                    android:theme="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    app:backgroundTint="@null"
                    app:icon="@drawable/ic_edit_24" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>